# OS

./: DynamicVector.sln  README.md
Channel/: BufferedChannel.h  buffered_channel.h
Console/: winscript.ps1
Console/Num/: NumberLibrary.cpp
Console/Test/: LibrariesDemo.cpp
Console/Vect/: VectLib.cpp  VectLib.h
LibrariesDemo/: LibrariesDemo.sln
LibrariesDemo/LibrariesDemo/: LibrariesDemo.vcxproj
LinuxLib/LibsLinux/Test/: CMakeLists.txt  main.cpp
LinuxLib/Linux L1/LIbTest/Test/: CMakeLists.txt  main.cpp
LinuxLib/Linux console/: main
LinuxLib/Test/: CMakeLists.txt
MultiLinux/: CMakeLists.txt  Matrix.h  main.cpp  matrices.txt
MultiWin/: MultiWin.sln
MultiWin/MultiWin/: Matrix.h  MultiWin.vcxproj  MultiWin.vcxproj.filters  mWin.cpp  matrices.txt
Multithreading/: Multithreading.sln
Multithreading/Multithreading/: Matrix.h  Multithreading.vcxproj  Multithreading.vcxproj.filters  main.cpp  matrices.txt
PipesLinux/pipesLinux/: CMakeLists.txt  main.cpp
PipesLinux/procA/: CMakeLists.txt  main.cpp
PipesLinux/procM/: CMakeLists.txt  main.cpp
PipesLinux/procP/: CMakeLists.txt  main.cpp
PipesLinux/procS/: CMakeLists.txt  main.cpp
ProcessesLinux/KillerLinux/: CMakeLists.txt  main.cpp
ProcessesLinux/User/: main.cpp
ProcessesLinux/UserLinux/: CMakeLists.txt
StaticNumber/: StaticNumber.sln
StaticNumber/NumberLib/: NumberLib.vcxproj  NumberLibrary.h
VectLib/: VectLib.sln
VectLib/VectLib/: VectLib.cpp  VectLib.h  VectLib.vcxproj  (+1 more)
VectorLibraryDLL/: VectorLib.cpp  VectorLib.h  VectorLibraryDLL.vcxproj  VectorLibraryDLL.vcxproj.filters
(+83 files in other folders)
